# keylogger.cool

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  install.sh  main.c  makefile  uninstall.sh
.github/workflows/: rust.yml
delegate/: Cargo.toml
delegate/src/: lib.rs
migrations/1704003808-Initialise/: down.sql  up.sql
migrations/1705214361-Keyboard layout table creation/: down.sql  up.sql
migrations/1705224031-Datetime column insertions/: down.sql  up.sql
number-cruncher/: Cargo.toml
scripts/: new-migration.sh
src/: DisplayConfiguration.h  DisplayConfiguration.m  defs.rs  main.rs  migrations.rs  tap.c  tap.h  utils.rs
src/debug/: mod.rs  term.rs  utils.rs
src/defs/: c.rs  event.rs  migrations.rs  mod.rs
src/status_bar/: Cargo.toml  README.md
src/status_bar/src/: lib.rs
