[package]
name = "keylogger-cool"
description = "An ethical keylogger for science."
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# chrono = "0.4.31"
csv = "1.3.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
serde = { version = "1.0.193", features = ["derive"] }

# [dev-dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
log = "0.4.20"
env_logger = "0.10.1"

[build-dependencies]
cc = "1.0.83"
csv = "1.3.0"
serde = { version = "1.0.193", features = ["derive"] }

[package.metadata.bundle]
name = "keylogger.cool"
identifier = "dev.malted.keylogger"
# icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
# resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Malted 2023-2024. All rights reserved."
category = "Productivity"
short_description = "An ethical keylogger for science."
