[package]
name = "status_bar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
block2 = "0.2.0"
icrate = { version = "0.0.3", features = [
    "apple",
    "Foundation_all",
    "AppKit_all",
] }
objc2 = "0.4.0"
